<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/result_color_turquaz"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/result_robot_name"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="@dimen/result_tab_column_width"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:gravity="right"
                android:padding="0dp"
                android:text="@string/result_points"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="@dimen/result_tab_column_width"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:gravity="right"
                android:padding="0dp"
                android:text="@string/result_time"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>
